@@ -1,3 +1,11 @@
+2010-06-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/command.c (MogrifyImage): The -colors, -map, and
+	-monochrome options now take effect immediately rather than at the
+	end of all other processing.  This is is more intuitive and
+	reasonable but may impact the output of scripts which place these
+	options prior to additional image processing operations.
+
 2010-06-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/blob.c (BlobToImage): If a temporary file must be used
